--- a/Hostinger.html
+++ b/Hostinger.html
@@ -28,23 +28,33 @@
             <div class="reseña">
                 <img src="./images/trustpilot.png" alt="titulodecomentario">
                 <p>Me gusta la atención y que mi página corre muy rápido, la migración desde otros sitios es muy fácil, buenos precios y muy competitivos.</p>
+                <div class="estrellas">
                 <img src="./images/Estrellas.png" alt="estrellas">
                 <a href="https://es.trustpilot.com/reviews/6344c7b39b12f67dfedd8bd8">
-                <img src="valoracionuno" alt=""></a>
-            </div>
-            <div class="reseña">
-                <img src="./images/trustpilot.png" alt="titulodecomentario">
-                <p>Migración completa del sitio a su servidor incluido en el plan contratado, solo hay que esperar y en unas horas establecidas a funcionar.</p>
-                <img src="./images/Estrellas.png" alt="estrellas"><a href="https://es.trustpilot.com/reviews/6161cce4d12ab8ef51624df9">
                 <img src="valoracionuno" alt=""><i class="bi bi-caret-right-fill"></i></a>
+                </div>
             </div>
             <div class="reseña">
                 <img src="./images/trustpilot.png" alt="titulodecomentario">
-                <p>Solucionaron inmediatamente todo lo que en otros hostings era un problema. Los chicos del servicio técnico y el chat son increíbles, muy bien predispuestos y ágiles.</p>
+                <p>Me gusta la atención y que mi página corre muy rápido, la migración desde otros sitios es muy fácil, buenos precios y muy competitivos.</p>
+                <div class="estrellas">
                 <img src="./images/Estrellas.png" alt="estrellas">
-                <a href="https://es.trustpilot.com/reviews/63c1cbee2338b6d417b95ca7">
+                <a href="https://es.trustpilot.com/reviews/6344c7b39b12f67dfedd8bd8">
                 <img src="valoracionuno" alt=""><i class="bi bi-caret-right-fill"></i></a>
-            </div>     
+                </div>
+            </div>
+            <div class="reseña">
+                <img src="./images/trustpilot.png" alt="titulodecomentario">
+                <p>Me gusta la atención y que mi página corre muy rápido, la migración desde otros sitios es muy fácil, buenos precios y muy competitivos.</p>
+                <div class="estrellas">
+                <img src="./images/Estrellas.png" alt="estrellas">
+                <a href="https://es.trustpilot.com/reviews/6344c7b39b12f67dfedd8bd8">
+                <img src="valoracionuno" alt=""><i class="bi bi-caret-right-fill"></i></a>
+                </div>
+            </div>
+            
+            
+        </div>     
     </section>
 </body>
 </html>
