--- a/Ejemplo1.html
+++ b/Ejemplo1.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Ejemplo1.css">
     <title>Ejemplo1</title>
 </head>
 <body>
-    <form>
-    <label for="email"></label>
-    <input type="email" id="email" placeholder="Email" id="email">
-    <br>
-    <br>
-    <label for="password"></label>
-    <input type="password" id="password" placeholder="Password" id="password">
-    <br>
-    <br>
-    <input type="submit" value="Acceso">
+    <form class="conteiner">
+        <div class="email">
+            <label for="email"></label>
+            <input type="email" id="email" placeholder="Email" id="email">
+        </div>
+        <div class="password">
+            <label for="password"></label>
+            <input type="password" id="password" placeholder="Password" id="password">
+        </div>
+        <div class="buttom">
+            <input type="submit" value="Acceso">
+        </div>
     </form>
 </body>
 </html>
