--- a/Ejemplo3.html
+++ b/Ejemplo3.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primer formulario</title>
+    <link rel="stylesheet" href="./Ejemplo3.css">
 </head>
 <body>
     <h1>Mi primer formulario</h1>
-    <form>
+    <form class="conteiner">
         <label for="nombre">Name :</label>
         <input id="nombre" type="nombre">
         <br>
