--- a/Header.html
+++ b/Header.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Header.css">
 </head>
 <body>
-    <header class="header1">
+    <header class="header">
         <h2>Logobakery</h2>
         <nav class="header1">
         <a href="">Services</a>  
@@ -16,17 +16,15 @@
         </nav>
         <p>contact</p>
     </header>
-    <br>
-    <header class="header2">
-        <h2>Logobakery</h2>
-        <nav class="header2">
+    <header class="header">
+        <nav class="header">
             <a href="">Services</a>
             <a href="">Projects</a>
             <a href="">About</a>
         </nav>
         <p>contact</p>
+        <h2>Logobakery</h2>
     </header>
-    <br>
     <header class="header3">
         <h2>Logobakery</h2>
         <nav class="header3">
